--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #fdfdfd;
+$text-color:       #E0E1E4;
 $background-color: #111;
 $brand-color:      #2a7ae2;
 
