--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,8 @@
       </a>
 
       <div class="trigger">
-          <a class="page-link" href="https://wiki.churchoffoxx.net">Wiki</a>
+          <a class="page-link" href="https://github.com/frozenfoxx/hack-doom">Hack Doom</a>
+          <a class="page-link" href="https://github.com/frozenfoxx/frozenfoxx.github.io/wiki">Wiki</a>
         {% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
